src/objects/MX_SB_SAC_LoginToken__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuración personalizada para credenciales de token</description>
    <fields>
        <fullName>Duracion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Duracion</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaFin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FechaFin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FechaIni__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FechaIni</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pwd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pwd</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Token</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Usr__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Usr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MX_SB_SAC_LoginToken</label>
</CustomObject>